--- a/src/pages/auth/Login/Login.module.scss
+++ b/src/pages/auth/Login/Login.module.scss
@@ -36,14 +36,22 @@
             .btnGroup {
                 display: flex;
                 justify-content: center;
-
+        
                 button {
-                    background-color: #AC5E09;
-                    padding: 1.125rem;
-                    color: white;
-                    font-weight: 700;
+                  width: 124px;
+                  height: 52px;
+                  background: linear-gradient(90deg, #c67d39, #ac5e07);
+                  border-radius: 16px;
+                  color: white;
+                  font-size: 14px;
+                  font-weight: bold;
+                  cursor: pointer;
+                  transition: background-color 0.3s ease;
+                  &:hover {
+                    background: linear-gradient(90deg, #ac5e07, #c67d39);
+                  }
                 }
-            }
+              }
         }
     }
 
