feat[auth]: SCRUM-167 hoàn thành các chức năng Đăng ký, Đăng nhập, Đăng xuất

--- a/src/pages/auth/Register/register.module.scss
+++ b/src/pages/auth/Register/register.module.scss
@@ -57,7 +57,7 @@
 
   .hr {
     width: 100%;
-    padding: 0 4rem;
+    padding: 0 100px;
 
     .line {
       position: relative;
@@ -82,7 +82,7 @@
 
   .RegisterOthers {
     width: 100%;
-    padding: 0 4rem;
+    padding: 0 100px;
 
     button {
       width: 100%;
